5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1601_588.log
== TEST (2019-04-13 11:03:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
saque = int(input("digite cedula"))
garoupa = saque // 100
espinha = saque % 100
onca = espinha // 50
osso = espinha % 50
bflor = osso // 10
print(int(gaoupa))
print(int(onca))
print(int(bflor))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(int(gaoupa))
NameError: name 'gaoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:11:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
saque = int(input("digite cedula"))
garoupa = saque // 100
espinha = saque % 100
onca = espinha // 50
osso = espinha % 50
bflor = osso // 10
print(int(garoupa))
print(int(onca))
print(int(bflor))

-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 11:11:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
saque = int(input("digite cedula"))
garoupa = saque // 100
espinha = saque % 100
onca = espinha // 50
osso = espinha % 50
bflor = osso // 10
print(int(garoupa))
print(int(onca))
print(int(bflor))

-- EXECUTION TIME:
0.113847
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
